# dak-engine

./: CMakeLists.txt  Makefile  main.cpp
assets/: compute.glsl  texture.frag  texture.vert
src/graphics/: shader.cpp  shader.h  texture.cpp  texture.h
src/system/: display.cpp  display.h  engine.cpp  engine.h  input.cpp  input.h  window.cpp  window.h
src/util/: manager-singleton.h  no_copy.h  singleton.h
